force-app/main/default/objects/Scheduled_Maintenance__c/Scheduled_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Scheduled Maintenance</label>
    <pluralLabel>Scheduled Maintenance</pluralLabel>
    <description>added from sfdx plugin</description>
    <nameField>
        <type>AutoNumber</type>
        <label>Name</label>
        <displayFormat>SM-{0}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>