force-app/main/default/objects/Scheduled_Maintenance__c/fields/Completed_on_Time__c.field-meta.xml
<CustomField>
    <label>Completed on Time</label>
    <type>Checkbox</type>
    <fullName>Completed_on_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer completed maintenance by due date/mileage</description>
    <inlineHelpText>Customer completed maintenance by due date/mileage</inlineHelpText>
</CustomField>