force-app/main/default/objects/Scheduled_Maintenance__c/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <formula>Vehicle__r.Owner__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>