force-app/main/default/objects/Scheduled_Maintenance__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <formula>Vehicle__r.Dealer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer</label>
    <type>Text</type>
</CustomField>