force-app/main/default/objects/Scheduled_Maintenance__c/fields/Dealer_City__c.field-meta.xml
<CustomField>
    <fullName>Dealer_City__c</fullName>
    <formula>Vehicle__r.Dealer__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer City</label>
    <type>Text</type>
</CustomField>