force-app/main/default/objects/Scheduled_Maintenance__c/fields/Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost__c</fullName>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>