force-app/main/default/objects/Scheduled_Maintenance__c/fields/is_Future__c.field-meta.xml
<CustomField>
    <fullName>is_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the maintenance has never been due, or scheduled, or completed</description>
    <inlineHelpText>the maintenance has never been due, or scheduled, or completed</inlineHelpText>
    <label>is Future</label>
    <type>Checkbox</type>
</CustomField>