force-app/main/default/objects/Scheduled_Maintenance__c/fields/Protection_Package__c.field-meta.xml
<CustomField>
    <fullName>Protection_Package__c</fullName>
    <formula>Vehicle__r.Protection_Package_Premier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protection Package</label>
    <type>Checkbox</type>
</CustomField>