force-app/main/default/objects/Scheduled_Maintenance__c/fields/Target_Mileage__c.field-meta.xml
<CustomField>
    <label>Target Mileage</label>
    <type>Number</type>
    <fullName>Target_Mileage__c</fullName>
    <scale>0</scale>
    <precision>18</precision>
</CustomField>